--- a/final_pjt/back/countries/templates/index.html
+++ b/final_pjt/back/countries/templates/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img {
+            max-width: 100%;
+            height: auto;
+            width: 300px; /* 원하는 너비로 설정 */
+        }
+    </style>
 </head>
 <body>
     {% load static %}
     <h1>Hello</h1>
-    {% comment %} <p>{{ countries.name }}</p>
+    <p>{{ countries.name }}</p>
     <img src="{% static countries.image1 %}" alt="img">
     <img src="{% static countries.image2 %}" alt="img">
-    <img src="{% static countries.image3 %}" alt="img"> {% endcomment %}
+    <img src="{% static countries.image3 %}" alt="img">
+    <img src="{% static countries.graph %}" alt="img">
 </body>
 </html>
